--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,24 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".room.RoomDBActivity"></activity>
+        <activity android:name=".storage.StorageActivity" />
+        <activity android:name=".opengl.GLES20Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,15 +37,13 @@
         <activity android:name=".clipboard.ClipboardActivity" />
         <activity android:name=".drawable.VectorDrawableActivity" />
         <activity android:name=".anim.DynamicAnimActivity" />
-
-        <activity android:name=".pip.PIPActivity"
-            android:supportsPictureInPicture="true"
-            android:resizeableActivity="true"
+        <activity
+            android:name=".pip.PIPActivity"
             android:launchMode="singleTask"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:resizeableActivity="true"
+            android:supportsPictureInPicture="true"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".anim.AnimActivity" />
-
         <activity android:name=".drawable.PaletteActivity" />
 
         <provider
